--- a/index.html
+++ b/index.html
@@ -4,15 +4,38 @@
 		<meta charset=utf-8>
 		<title>智慧城市运营管理系统</title>
 		<link rel="stylesheet" type="text/css" href="style.css?v=1.5">
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+		<link rel="icon" type="image/png" href="images/logo.png">
+		<!-- Bootstrap core CSS -->
+		<link href="libs/bootstrap-3.3.4/css/bootstrap.css" rel="stylesheet">
+		<!-- font-awesome CSS -->
+		<link href="libs/font-awesome/css/font-awesome.css" rel="stylesheet">
+		<!-- animate CSS -->
+		<link href="libs/animate/animate.min.css" rel="stylesheet">
+		<!-- weather CSS -->
+		<link href="libs/weather/screen.css"  rel="stylesheet">
+		<!-- <link rel="stylesheet" href="libs/xenon/css/xenon.css" type="text/css"> -->
+		<!-- scrollbar CSS -->
+		<link href="libs/scrollbar/jquery.mCustomScrollbar.min.css" rel="stylesheet">
+		<!-- arcgis CSS -->
+		<link href="https://js.arcgis.com/4.0/dijit/themes/claro/claro.css" rel="stylesheet"/>
+		<link href="https://js.arcgis.com/4.0/esri/css/main.css" rel="stylesheet"/>
+		<!-- Custom styles for this template -->
+		<link href="css/normalize.css" rel="stylesheet">
+		<link href="css/component.css" rel="stylesheet">
+		<link href="css/custom.css" rel="stylesheet">
 	</head>
 	<body>
-		<div id="loading_screen">
-			<div id="loading_screen_text"><a style="font-family:barlowbold">智能城市运营管理系统</a><a>&nbsp;&nbsp;|&nbsp;&nbsp;</a><a id="loading_ani" style="margin-left:4px;">加载中...</a></div>
-		</div>
+<!--		<div id="loading_screen">-->
+<!--			<div id="loading_screen_text"><a style="font-family:barlowbold">智能城市运营管理系统</a><a>&nbsp;&nbsp;|&nbsp;&nbsp;</a><a id="loading_ani" style="margin-left:4px;">加载中...</a></div>-->
+<!--		</div>-->
 
-		<div id="glFullscreen">
-				<canvas id="main"></canvas>
-		</div>
+<!--		<div id="glFullscreen">-->
+<!--				<canvas id="main"></canvas>-->
+<!--		</div>-->
 		<div id="dat">
 	
 		</div>
@@ -42,6 +65,85 @@
 			</div>
 -->
 		</div>
+		<!-- NAVBAR================================================== -->
+		<nav class="navbar navbar-glass navbar-fixed-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="index.html">
+						<img alt="logo" src="images/logo.png">
+						<div class="navbar-title">
+							<span class="navbar-brand-text" style="font-family:barlowbold;">智慧城市综合运营管理中心</span>
+							<span class="navbar-brand-subtext" style="font-family:barlowbold;">Smart City Integrated Operations & Management Center</span>
+						</div>
+					</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-left">
+						<li class="date-line">
+							<div class="navbar-title">
+								<span class="navbar-brand-subtext" id="date"></span>
+								<span class="navbar-brand-text" id="clock"></span>
+							</div>
+						</li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right" id="exit">
+						<li id="weather">
+						</li>
+						<!-- <li>
+                            <div id="line">
+                            </div>
+                        </li> -->
+						<li id="TOC">
+						</li>
+						<!-- 按钮的分割线 -->
+						<!-- <li>
+                            <div id="line">
+                            </div>
+                        </li> -->
+						<li>
+							<a href="#"><span class="glyphicon glyphicon-off" aria-hidden="true"></span></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<!-- NAVBAR================================================== -->
+		<!-- MAIN CONTAIN================================================== -->
+		<div class="main-container">
+			<div id="loading_screen">
+				<div id="loading_screen_text"><a style="font-family:barlowbold">智能城市运营管理系统</a><a>&nbsp;&nbsp;|&nbsp;&nbsp;</a><a id="loading_ani" style="margin-left:4px;">加载中...</a></div>
+			</div>
+			<div id="glFullscreen">
+				<canvas id="main"></canvas>
+			</div>
+			<div id="map"></div>
+			<div id="leftBar" class="sideBar left opacity0">
+				<div class="bar-content" id="leftContent">
+				</div>
+				<span id="leftClickSpan" class="glyphicon glyphicon-option-vertical opration-handler" aria-hidden="true"></span>
+			</div>
+
+			<div id="RightBar" class="sideBar right opacity0">
+				<span id="rightClickSpan" class="glyphicon glyphicon-option-vertical opration-handler" aria-hidden="true"></span>
+				<div class="bar-content" id="rightContent">
+				</div>
+			</div>
+
+			<div id="BottomBar" class="bottomBar opacity0">
+				<span id="bottomClickSpan" class="glyphicon glyphicon-option-horizontal opration-handler" aria-hidden="true"></span>
+				<div class="bar-content-bottom" id="bottomContent">
+				</div>
+			</div>
+		</div>
+		<!-- MAIN CONTAIN================================================== -->
+
+		<!-- FOOTER================================================== -->
+		<footer class="footer"></footer>
+		<!-- FOOTER================================================== -->
+
+		<!-- PAGEOVERLAY================================================== -->
+		<div class="page-overlay"></div>
+		<!-- PAGEOVERLAY================================================== -->
 <!--
 
 
@@ -87,41 +189,6 @@
 			<div id="guide_line"> </div>
 		</div>
 -->
-		<div id = "left">
-			<div id="case_statistics">
-				<a class="info_title">案卷统计</a>
-				<div id="case_left_column"> 
-					<div class="case_block">
-						<img src="#">
-						<span>16927</span>
-						<span>案卷总数</span>
-					</div>
-				</div>
-
-				<div id="case_right_column">
-
-				</div>
-			</div>
-
-			<div id="video_ai">
-				<a class="info_title">视频AI预警</a>
-				<div id="video_list">
-					<div class="video_block">
-						<img src="#">
-						<span>露天烧烤</span> 
-					</div>	
-				</div>
-			</div>
-
-			<div class="info_title" id="public">
-				<a>舆情预警</a>
-
-			</div>
-
-		</div>
-
-
-
 
 		<div id="advance_settings">
 			<div id="as_input">
@@ -151,5 +218,29 @@
 		<script src="js/loaders/LoaderSupport.js"></script>
 		<script src="js/loaders/OBJLoader.js"></script>
 		<script src="js/loaders/OBJLoader2.js"></script>
-		<script src="js/main.js?v=33"></script></script>
+
+
+		<script src="libs/jquery-1.11.3.min.js"></script>
+		<script src="libs/AnimatedLetters/segment.min.js"></script>
+		<script src="libs/AnimatedLetters/d3-ease.v0.6.js"></script>
+		<script src="libs/AnimatedLetters/letters.js"></script>
+		<script src="libs/echarts.min.js"></script>
+		<script src="libs/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+		<script src="config/dojoConfig.js"></script>
+		<script src="config/config.js"></script>
+		<script src="libs/bootstrap-3.3.4/js/bootstrap.min.js"></script>
+		<script src="libs/xenon/js/joinable.js"></script>
+		<script src="libs/devexpress-web-14.1/js/globalize.min.js"></script>
+		<script src="libs/devexpress-web-14.1/js/dx.chartjs.js"></script>
+		<script src="libs/vTicker.min.js"></script>
+		<!-- <script type="text/javascript" src="js/widgets/layerList.js"></script> -->
+		<script src="https://js.arcgis.com/4.0/init.js"></script>
+
+		<script type="text/javascript">
+			require(["application/main"], function(main) {
+				window.main = new main(configOptions);
+			});
+		</script>
+		<!-- MAIN CORE JAVASCRIPT================================================== -->
+		<script src="js/main.js?v=33"></script>
 </html>
