--- a/index.html
+++ b/index.html
@@ -218,8 +218,10 @@
 		<script src="js/loaders/LoaderSupport.js"></script>
 		<script src="js/loaders/OBJLoader.js"></script>
 		<script src="js/loaders/OBJLoader2.js"></script>
+		<script src="js/main.js?v=33"></script>
 
 
+		<!-- MAIN CORE JAVASCRIPT================================================== -->
 		<script src="libs/jquery-1.11.3.min.js"></script>
 		<script src="libs/AnimatedLetters/segment.min.js"></script>
 		<script src="libs/AnimatedLetters/d3-ease.v0.6.js"></script>
@@ -242,5 +244,5 @@
 			});
 		</script>
 		<!-- MAIN CORE JAVASCRIPT================================================== -->
-		<script src="js/main.js?v=33"></script>
+	</body>
 </html>
