--- a/index.html
+++ b/index.html
@@ -45,30 +45,20 @@
 	<body>
 		<nav class="navbar navbar-glass navbar-fixed-top">
 			<div class="container-fluid">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html">
-						<img alt="logo" src="images/logo.png">
+				<div class="navbar-header" style="margin-left: 25%;">
+					<a class="navbar-brand"   href="index.html">
+						<img style="width:40px;" alt="logo" src="images/logo.png">
 						<div class="navbar-title">
 							<span class="navbar-brand-text" style="font-family:barlowbold;text-align: center;width: 100%;">山西综改示范区大数据智慧指挥运营中心</span>
 							<span class="navbar-brand-subtext" style="font-family:barlowbold;">城市公共安全</span>
 						</div>
 					</a>
 				</div>
-				<div class="navbar-collapse collapse" >
-					<ul class="nav navbar-nav navbar-left">
-						<li class="date-line">
-							<div class="navbar-title">
-								<span class="navbar-brand-subtext" id="date"></span>
-								<span class="navbar-brand-text" id="clock"></span>
-							</div>
-						</li>
-					</ul>
-				</div>
 			</div>
 		</nav>
 
 		<div id="loading_screen">
-			<div id="loading_screen_text"><a style="font-family:barlowbold">智能城市运营管理系统</a><a>&nbsp;&nbsp;|&nbsp;&nbsp;</a><a id="loading_ani" style="margin-left:4px;">加载中...</a></div>
+			<div id="loading_screen_text"><a style="font-family:barlowbold">智能城市运营管理系统</a><a>&nbsp;&nbsp;&nbsp;&nbsp;</a><a id="loading_ani" style="margin-left:4px;">加载中...</a></div>
 		</div>
 
 		<div id="glFullscreen">
@@ -80,11 +70,6 @@
 
 		<div id="alert">
 			<a id="alert_text"> </a>
-		</div>
-		<div class="top_bg">
-			<div id="logo">
-				<a style="font-family:barlowbold;">BUPT </a> <a>| 3D矢量地图</a>
-			</div>
 		</div>
 
 		<div id = "left">
@@ -206,6 +191,19 @@
 				</div>
 			</div>	
 
+			<div id="flowrate">
+				<a class="info_title">
+					<i>
+						<svg class="tri" aria-hidden="true">
+							<use xlink:href="#icon-sanjiaoxing"></use>
+						</svg>
+					</i>
+
+					当前位置</a>
+				<div>
+					<img style="width:100%;" src="map.jpg">
+				</div>
+			</div>	
 		</div>
 
 
