1. Change map image 2. Add icons

--- a/city2.html
+++ b/city2.html
@@ -169,15 +169,35 @@
 				安全预警</a>
 			<div id="video_list">
 				<ul style="color:#fff;">
-					<li>风险资产：183.221.19.32,低风险</li>
-					<li style="color: #ffe820">弱点增加：183.221.91.56,中,恶意程序,3</li>
-					<li style="color: #ff2b1c">风险资产：183.221.78.00,失陷</li>
-					<li style="color: #b313ff">弱点增加：183.221.06.23,低,安全隐患,1</li>
+					<li>
+						<svg class="icon" aria-hidden="true" style="width: 1em;height: 1em">
+							<use xlink:href="#icon-xinwen"></use>
+						</svg>
+						风险资产：183.221.19.32,低风险
+					</li>
+					<li style="color: #ffe820">
+						<svg class="icon" aria-hidden="true" style="width: 1em;height: 1em">
+							<use xlink:href="#icon-xinwen"></use>
+						</svg>
+						弱点增加：183.221.91.56,中,恶意程序,3
+					</li>
+					<li style="color: #ff2b1c">
+						<svg class="icon" aria-hidden="true" style="width: 1em;height: 1em">
+							<use xlink:href="#icon-xinwen"></use>
+						</svg>
+						风险资产：183.221.78.00,失陷
+					</li>
+					<li style="color: #b313ff">
+						<svg class="icon" aria-hidden="true" style="width: 1em;height: 1em">
+							<use xlink:href="#icon-xinwen"></use>
+						</svg>
+						弱点增加：183.221.06.23,低,安全隐患,1
+					</li>
 				</ul>
 			</div>
 		</div>
-		<div id="flowrate" style="margin-left: 10px">
-			<a class="info_title">
+		<div id="flowrate">
+			<a class="info_title" style="margin-left: 10px">
 				<i>
 					<svg class="tri" aria-hidden="true">
 						<use xlink:href="#icon-sanjiaoxing"></use>
@@ -190,8 +210,8 @@
 			</div>
 		</div>
 
-		<div id="flowrate"  style="margin-left: 10px">
-			<a class="info_title">
+		<div id="flowrate">
+			<a class="info_title" style="margin-left: 10px">
 				<i>
 					<svg class="tri" aria-hidden="true">
 						<use xlink:href="#icon-sanjiaoxing"></use>
@@ -200,7 +220,7 @@
 
 				当前位置</a>
 			<div>
-				<img style="width:100%;" src="map.jpg">
+				<img style="width:100%;" src="map.png">
 			</div>
 		</div>
 	</div>
